--- a/action.yaml
+++ b/action.yaml
@@ -26,6 +26,7 @@ runs:
       run: |
         value=$(tr -dc A-Za-z0-9 </dev/urandom | head -c 32 || :)
         echo "value=securefix-${value}" >> "$GITHUB_OUTPUT"
+    # List fixed file paths
     - id: files
       shell: bash
       env:
@@ -41,6 +42,7 @@ runs:
           echo "$FILES"
           echo EOF
         } >> "$GITHUB_OUTPUT"
+    # Create a GitHub App token to create and delete a label
     - uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
       if: steps.files.outputs.value != ''
       id: token
@@ -53,23 +55,32 @@ runs:
           {
             "issues": "write"
           }
+
+    # Create metadata
+    - uses: actions/github-script@v7
+      id: metadata
+      with:
+        script: |
+          return {
+            context: context,
+          };
+
+    # Create a metadata file
     - if: steps.files.outputs.value != ''
       shell: bash
-      run: echo "$METADATA" > "${ARTIFACT_NAME}.json"
+      run: echo "$EVENT" > "${ARTIFACT_NAME}.json"
       env:
         ARTIFACT_NAME: ${{ steps.artifact-name.outputs.value }}
-        METADATA: |
-          {
-            "pull_request": {
-              "number": "${{ github.event.number }}"
-            }
-          }
+        EVENT: ${{github.event}}
+
+    # Create a file where fixed file paths are listed
     - if: steps.files.outputs.value != ''
       shell: bash
       run: echo "$FILES" > "${ARTIFACT_NAME}_files.txt"
       env:
         ARTIFACT_NAME: ${{ steps.artifact-name.outputs.value }}
         FILES: ${{ steps.files.outputs.value }}
+    # Upload files to GitHub Actions Artifact
     - if: steps.files.outputs.value != ''
       uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
       with:
@@ -78,11 +89,13 @@ runs:
           ${{ steps.files.outputs.value }}
           ${{steps.artifact-name.outputs.value}}.json
           ${{steps.artifact-name.outputs.value}}_files.txt
+    # Delete metadata files
     - if: steps.files.outputs.value != ''
       shell: bash
       run: rm "${ARTIFACT_NAME}.json" "${ARTIFACT_NAME}_files.txt"
       env:
         ARTIFACT_NAME: ${{ steps.artifact-name.outputs.value }}
+    # Create a label
     - if: steps.files.outputs.value != ''
       shell: bash
       env:
@@ -94,6 +107,7 @@ runs:
           -R "${GITHUB_REPOSITORY_OWNER}/${REPO}" \
           "$ARTIFACT_NAME" \
           --description "$GITHUB_REPOSITORY/${GITHUB_RUN_ID}"
+    # Delete a label
     - if: steps.files.outputs.value != ''
       shell: bash
       env:
@@ -105,6 +119,7 @@ runs:
           -R "${GITHUB_REPOSITORY_OWNER}/${REPO}" \
           --yes \
           "$ARTIFACT_NAME"
+    # Fail if changes are detected
     - if: steps.files.outputs.value != ''
       shell: bash
       env:
