fix name and description

--- a/server/commit/action.yaml
+++ b/server/commit/action.yaml
@@ -1,5 +1,5 @@
-name: Fix Code securely
-description: Fix Code securely
+name: Fix Code
+description: Fix Code
 author: Shunsuke Suzuki
 branding:
   icon: git-commit
