--- a/server/prepare/action.yaml
+++ b/server/prepare/action.yaml
@@ -1,5 +1,5 @@
-name: Fix Code securely
-description: Fix Code securely
+name: Prepare for fixing code
+description: Prepare for fixing code
 author: Shunsuke Suzuki
 branding:
   icon: git-commit
