--- a/action.yaml
+++ b/action.yaml
@@ -57,7 +57,8 @@ runs:
           }
 
     # Create metadata
-    - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
+    - if: steps.files.outputs.value != ''
+      uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       id: metadata
       with:
         script: |
