--- a/action.yaml
+++ b/action.yaml
@@ -72,7 +72,7 @@ runs:
       run: echo "$EVENT" > "${ARTIFACT_NAME}.json"
       env:
         ARTIFACT_NAME: ${{ steps.artifact-name.outputs.value }}
-        EVENT: ${{github.event}}
+        EVENT: ${{toJson(github.event)}}
 
     # Create a file where fixed file paths are listed
     - if: steps.files.outputs.value != ''
