fix: fix expression

--- a/server/commit/action.yaml
+++ b/server/commit/action.yaml
@@ -32,20 +32,20 @@ runs:
   using: composite
   steps:
     # Create and push a commit
-    - if: ${{ steps.files.outputs.value != '' }}
+    - if: fromJson(inputs.outputs).fixed_files != ''
       uses: suzuki-shunsuke/commit-action@9faad521ea6a1e768439ffbe6b25b6cb3fc1b181 # v0.0.6
       with:
         app_id: ${{inputs.app_id}}
         app_private_key: ${{inputs.app_private_key}}
         repository: ${{ fromJson(inputs.outputs).repository_full_name }}
-        branch: ${{ fromJson(inputs.outputs).workflow_run.head_branch }}
-        files: ${{ inputs.files }}
+        branch: ${{ fromJson(fromJson(inputs.outputs).workflow_run).head_branch }}
+        files: ${{ fromJson(inputs.outputs).fixed_files }}
         commit_message: |
           ${{inputs.commit_message}}
           ${{github.server_url}}/${{github.repository}}/actions/runs/${{github.run_id}}
 
     # Create a GitHub App token to report an error to a pull request
-    - if: failure() && fromJson(inputs.outputs).pr != null
+    - if: failure() && fromJson(inputs.outputs).pr != ''
       uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
       id: pr_token
       with:
@@ -59,12 +59,12 @@ runs:
           }
 
     # Create a pull request comment to report an error
-    - if: failure() && fromJson(inputs.outputs).pr != null
+    - if: failure() && fromJson(inputs.outputs).pr != ''
       shell: bash
       env:
         GH_TOKEN: ${{ steps.pr_token.outputs.token }}
         REPO: ${{ fromJson(inputs.outputs).repository_full_name }}
-        PR_NUMBER: ${{ fromJson(inputs.outputs).pr.number }}
+        PR_NUMBER: ${{ fromJson(fromJson(inputs.outputs).pr).number }}
         COMMENT: ${{ inputs.pull_request_comment }}
       run: |
         gh pr comment \
