--- a/server/prepare/action.yaml
+++ b/server/prepare/action.yaml
@@ -74,7 +74,9 @@ runs:
           ["${{ steps.info.outputs.repo }}"]
         permissions: >-
           {
-            "actions": "read"
+            "actions": "read",
+            "contents": "read",
+            "pull_requests": "read"
           }
 
     # Get GitHub Actions Workflow Run
@@ -125,27 +127,13 @@ runs:
         } >> "$GITHUB_OUTPUT"
         rm "$METADATA_FILE"
 
-    # Create a GitHub App token to read a pull request
-    - if: fromJson(steps.metadata.outputs.value).context.payload.pull_request
-      uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2.1.0
-      id: pr_read_token
-      with:
-        app_id: ${{inputs.app_id}}
-        private_key: ${{inputs.app_private_key}}
-        repositories: >-
-          ["${{ steps.info.outputs.repo }}"]
-        permissions: >-
-          {
-            "pull_requests": "read"
-          }
-
     # Get a pull request
     - if: fromJson(steps.metadata.outputs.value).context.payload.pull_request
       id: pr
       shell: bash
       env:
         NUMBER: ${{ fromJson(steps.metadata.outputs.value).context.payload.pull_request.number }}
-        GH_TOKEN: ${{ steps.pr_read_token.outputs.token }}
+        GH_TOKEN: ${{ steps.token.outputs.token }}
         REPO: ${{ steps.info.outputs.repo_full_name }}
       run: |
         data=$(gh api \
@@ -158,9 +146,29 @@ runs:
           echo EOF
         } >> "$GITHUB_OUTPUT"
 
+    # Get a branch
+    - if: |
+        !fromJson(steps.metadata.outputs.value).context.payload.pull_request
+      id: branch
+      shell: bash
+      env:
+        GH_TOKEN: ${{ steps.token.outputs.token }}
+        REPO: ${{ steps.info.outputs.repo_full_name }}
+        BRANCH: ${{ fromJson(steps.workflow_run.outputs.value).head_branch }}
+      run: |
+        data=$(gh api \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "/repos/$REPO/branches/$BRANCH")
+        {
+          echo 'value<<EOF'
+          echo "$data"
+          echo EOF
+        } >> "$GITHUB_OUTPUT"
+
     # Validate if the workflow commit sha is latest
     - shell: bash
-      if: fromJson(steps.workflow_run.outputs.value).head_sha != fromJson(steps.pr.outputs.value).head.sha
+      if: fromJson(steps.workflow_run.outputs.value).head_sha != (fromJson(steps.metadata.outputs.value).context.payload.pull_request && fromJson(steps.pr.outputs.value).head.sha || fromJson(steps.branch.outputs.value).commit.sha)
       run: |
         echo "::error:: The workflow commit sha is not the latest"
         exit 1
