fix: post a comment if prepare fails

--- a/server/commit/action.yaml
+++ b/server/commit/action.yaml
@@ -20,14 +20,12 @@ inputs:
   commit_message:
     description: |
       Commit message
-    required: true
+    required: false
     default: Securefix
   pull_request_comment:
     description: |
       Pull Request comment
-    required: true
-    default: |
-      :x: Securefix failed.
+    required: false
 runs:
   using: composite
   steps:
@@ -65,7 +63,7 @@ runs:
         GH_TOKEN: ${{ steps.pr_token.outputs.token }}
         REPO: ${{ fromJson(inputs.outputs).repository_full_name }}
         PR_NUMBER: ${{ fromJson(inputs.outputs).pr && fromJson(fromJson(inputs.outputs).pr).number || '' }}
-        COMMENT: ${{ inputs.pull_request_comment }}
+        COMMENT: ${{ inputs.pull_request_comment && inputs.pull_request_comment || fromJson(inputs.outputs).pull_request_comment }}
       run: |
         gh pr comment \
           -R "$REPO" \
