--- a/action.yaml
+++ b/action.yaml
@@ -18,6 +18,10 @@ inputs:
       Server repository name
     required: false
     default: securefix
+  commit_message:
+    description: |
+      Commit message
+    required: false
 runs:
   using: composite
   steps:
@@ -60,10 +64,15 @@ runs:
     - if: steps.files.outputs.value != ''
       uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
       id: metadata
+      env:
+        COMMIT_MESSAGE: ${{inputs.commit_message}}
       with:
         script: |
           return {
             context: context,
+            inputs: {
+              commit_message: process.env.COMMIT_MESSAGE || '',
+            },
           };
 
     # Create a metadata file
